# image_processor

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
